--- a/bower.json
+++ b/bower.json
@@ -12,12 +12,10 @@
     "angular-adaptive-googlemaps": "latest",
     "angular-bootstrap-datetimepicker": "latest",
     "ng-notify": "latest",
-    "checklist-model": "~0.2.4",
-    "ng-file-upload": "~5.0.9",
-    "ng-file-upload-shim"
+    "checklist-model": "~0.2.4"
   },
   "resolutions": {
-    "angular": "1.3.15",
+    "angular": "~1.4.0",
     "angular-animate": "1.3.13",
     "angular-sanitize": "1.3.13",
     "angular-ui-router": "0.2.13"
