--- a/bower.json
+++ b/bower.json
@@ -15,9 +15,6 @@
     "checklist-model": "~0.2.4"
   },
   "resolutions": {
-    "angular": "~1.4.0",
-    "angular-animate": "1.3.13",
-    "angular-sanitize": "1.3.13",
-    "angular-ui-router": "0.2.13"
+    "angular": "~1.4.0"
   }
 }
