Removing unnecessary files.

--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,14 @@
 .tmp
 .sass-cache
 *.keystore
-*.sw*
-
-*.c
-*.h
-*.xib
-
 www/lib
 node_modules/
 platforms/
 plugins/
 .brackets.json
-
 www/vendor
 www/bower_components
-node_modules
-
+www/css/ionic.app.css
 resources/ios
 resources/android
-resources/
-
-.idea/*
+.idea
