--- a/bower.json
+++ b/bower.json
@@ -14,7 +14,8 @@
     "jquery": "latest",
     "lodash": "latest",
     "ng-notify": "latest",
-    "restangular": "latest"
+    "restangular": "latest",
+    "angular-google-analytics": "~1.1.6"
   },
   "resolutions": {
     "angular": "~1.4.0",
